<resources>
    <string name="app_name">RetrofitDemoInJava</string>
    <string name="already_registered_login_here">Already registered? Login here</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="new_user_signup_here">New User? Signup here</string>
    <string name="dashboard">Dashboard</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="update">Update</string>
    <string name="update_your_account">Update your account</string>
    <string name="update_your_password">Update Your Password</string>
    <string name="new_pass">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="repeat_pass">Repeat Password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
</resources>