<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/update_your_account"
                android:gravity="center"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/colorWhile"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/email"
                    android:id="@+id/emailUpdateET"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/username"
                    android:id="@+id/usernameUpdateET"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:text="@string/update"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorWhile"
                android:id="@+id/updateUserBtn"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/update_your_password"
                android:gravity="center"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/colorWhile"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/current_password"
                    android:id="@+id/currentPassUpdateET"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/new_pass"
                    android:id="@+id/newPassUpdateET"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/repeat_pass"
                    android:id="@+id/repeatPassUpdateET"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:text="@string/change_password"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorWhile"
                android:id="@+id/changePasswordBtn"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>