<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textSize="80sp"
        android:gravity="center"
        android:fontFamily="cursive"
        android:id="@+id/headingLoginTv"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@id/headingLoginTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/emailLoginLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:id="@+id/emailLoginET"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@id/emailLoginLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/passwordLoginLayout"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:id="@+id/passwordLoginET"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:text="@string/login"
        android:layout_below="@id/passwordLoginLayout"
        android:textColor="@color/colorWhile"
        android:layout_marginTop="10dp"
        android:id="@+id/btnLogin"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/new_user_signup_here"
        android:layout_below="@id/btnLogin"
        android:id="@+id/signUpHere"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_height="wrap_content"/>

</RelativeLayout>